--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div>
-            <h1 class="header_text">Do you wanna go out with me Rimma?</h1>
+            <h1 class="header_text">Do you wanna go out with me?</h1>
         </div>
         <div class="gif_container">
             <img src="https://media.tenor.com/SwQT4BBJS0oAAAAi/peach-and-goma-peach-goma.gif" alt="Cute animated illustration">
