--- a/yes.html
+++ b/yes.html
@@ -8,7 +8,7 @@
             <h1 class="header_text">Yeeeyyyy!!</h1>
         </div>
         <div class="gif_container">
-            <img src="https://media1.tenor.com/m/5BYK-WS0__gAAAAd/cool-fun.gif" alt="Cute animated illustration">
+            <img src="https://media.tenor.com/qljmSb0nfXsAAAAi/kiss.gif" alt="Cute animated illustration">
         </div>
     </div>
    
