--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <h1 class="header_text">Do you wanna go out with me?</h1>
         </div>
         <div class="gif_container">
-            <img src="https://github.com/niuteru/douwannagoout/blob/main/photo_10_2024-12-21_22-32-01.jpg" alt="Cute animated illustration">
+            <img src="https://iimg.su/s/21/th_CwDTn60KSTzh6Sck51EKligy7phzE8ulYRA9MSTY.jpg" alt="Cute animated illustration">
         </div>
         <div class="buttons">
             <button class="btn" id="yesButton" onclick="nextPage()">Yes</button>
