--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <body>
     <div class="container">
         <div>
-            <h1 class="header_text">Do you wanna go out with me?</h1>
+            <h1 class="header_text">даля ты плохо себя чувствуешь?</h1>
         </div>
         <div class="gif_container">
-            <img src="https://iimg.su/s/21/th_CwDTn60KSTzh6Sck51EKligy7phzE8ulYRA9MSTY.jpg" alt="Cute animated illustration">
+            <img src="https://media.tenor.com/LkobROClqWwAAAAM/mochi-mochimons.gif" alt="Cute animated illustration">
         </div>
         <div class="buttons">
-            <button class="btn" id="yesButton" onclick="nextPage()">Yes</button>
-            <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">No</button>
+            <button class="btn" id="yesButton" onclick="nextPage()">да</button>
+            <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">нет</button>
             <script>
                 function nextPage() {
                     window.location.href = "yes.html";
@@ -30,3 +30,4 @@
     </div>
 </body>
 </html>
+
